--- a/demo/.classpath
+++ b/demo/.classpath
@@ -2,12 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/evolution.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/optimization.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/math.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/types.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/random.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/services.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/gui.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/evolution"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/gui"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/math"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/optimization"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/types"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/random"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
