--- a/learn/.classpath
+++ b/learn/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/services.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/types.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/math.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/data.jar"/>
-	<classpathentry kind="lib" path="/home/jgomez/git/unalcol/libs/random.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/data"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/math"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/types"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/random"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
